# rotator_esp_idf

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  Makefile  README.md  fix_inf_re_run_cmake  flash.bat  menuconfig  partitions_example.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  start
.github/: dependabot.yml  labeler.config.yml  labeler.yml
.github/workflows/: label.yml  labeler.yml
components/DendoStepper/: CMakeLists.txt  DendoStepper.cpp
components/DendoStepper/include/: DendoStepper.h
front/: 1.txt  browserlist.json  package-lock.json  package.json  vue.config.js  webpack.config.js
front/public/: canonical.html  index.html
front/src/: App.vue  main.js  router.js  store.js
front/src/components/: RotatorAuth.vue  RotatorConnection.vue  RotatorDataset.vue  RotatorDev.vue  RotatorError.vue  RotatorInfo.vue  RotatorLight.vue  RotatorLoading.vue  RotatorMain.vue  RotatorMove.vue  RotatorReset_data.vue  RotatorSettings.vue  RotatorTools.vue  RotatorWifi.vue
front/src/plugins/: vuetify.js
main/: CMakeLists.txt  Kconfig.projbuild  as5600_lib.c  dnsServer.c  esp_rest_main.c  nvs_logic.c  prov.c  rest_server.c  rest_server.cpp  rotator_main.c  stepper_control.cpp  stepper_logic.c
web-page/: index.html  package-lock.json  package.json
web-page/public/: index.html  upd.html
web-page/src/: App.vue  main.js  router.js
web-page/src/components/: RotatorAuth.vue  RotatorInfo.vue  RotatorMain.vue  RotatorSettings.vue  RotatorTools.vue
